refactor: 컨트롤러 메소드 분리